Add log functionality
